Switch to blake2b hashing, rename user -> client.
