# openapi.yaml
@@ -7,9 +7,9 @@ info:
   version: 1.0.0
   title: Umpyre API
 paths:
-  /user/authenticate:
+  /client/authenticate:
     post:
-      summary: Authenticate user
+      summary: Authenticate client
       requestBody:
         required: true
         description: A JSON object containing the login and password.
@@ -34,17 +34,17 @@ paths:
                 example: X-UMPYRE-APIKEY=token; Path=/; HttpOnly
         "401":
           $ref: "#/components/responses/UnauthorizedError"
-  /user/{user_id}:
+  /client/{client_id}:
     get:
       summary: >-
-        Get user info
+        Get client info
       description: >-
-        Fetches and returns the user info object for the provided user ID.
-      operationId: get-user
+        Fetches and returns the client info object for the provided client ID.
+      operationId: get-client
       parameters:
-        - name: user_id
+        - name: client_id
           in: path
-          description: "User ID."
+          description: "Client ID."
           required: true
           example: "aca0da3ee24b41d0a98d9a4f6256aa78"
           schema:
@@ -52,14 +52,14 @@ paths:
       responses:
         "200":
           description: >-
-            The user exists and is available.
+            The client exists and is available.
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/User"
+                $ref: "#/components/schemas/Client"
         "404":
           description: >-
-            The user does not exist.
+            The client does not exist.
           content:
             application/json:
               schema:
@@ -68,61 +68,61 @@ paths:
           $ref: "#/components/responses/UnauthorizedError"
     put:
       summary: >-
-        Update user info
+        Update client info
       description: >-
-        Updates the underlying user model for the provided user ID.
-      operationId: update-user
+        Updates the underlying client model for the provided client ID.
+      operationId: update-client
       requestBody:
         required: true
-        description: A JSON object containing the user model.
+        description: A JSON object containing the client model.
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/User"
+              $ref: "#/components/schemas/Client"
       responses:
         "200":
           description: >-
-            The user exists and is available.
+            The client exists and is available.
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/User"
+                $ref: "#/components/schemas/Client"
         "404":
           description: >-
-            The user does not exist.
+            The client does not exist.
           content:
             application/json:
               schema:
                 $ref: "#/components/responses/Error"
         "401":
           $ref: "#/components/responses/UnauthorizedError"
-  /user:
+  /client:
     post:
       summary: >-
-        Create a new user
+        Create a new client
       description: >-
-        Creates a new user with the supplied user model. A unique user ID
+        Creates a new client with the supplied client model. A unique client ID
         will be generated by the server.
-      operationId: create-user
+      operationId: create-client
       security: []
       requestBody:
-        description: The user to create.
+        description: The client to create.
         required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/NewUser"
+              $ref: "#/components/schemas/NewClient"
       responses:
         "200":
           description: >-
-            The user was created successfully.
+            The client was created successfully.
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/User"
+                $ref: "#/components/schemas/Client"
         "400":
           description: >-
-            The user could not be created.
+            The client could not be created.
           content:
             application/json:
               schema:
@@ -134,19 +134,19 @@ paths:
       summary: >-
         Get all messages
       description: >-
-        Returns all of the messages in a user's inbox stored on the server.
+        Returns all of the messages in a client's inbox stored on the server.
       operationId: get-messages
       responses:
         "200":
           description: >-
-            The user exists and is available.
+            The client exists and is available.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Messages"
         "404":
           description: >-
-            The specified user does not exist.
+            The specified client does not exist.
           content:
             application/json:
               schema:
@@ -157,7 +157,7 @@ paths:
       summary: >-
         Send a message
       description: >-
-        Send a message from the calling user's account to another user.
+        Send a message from the calling client's account to another client.
       operationId: send-message
       requestBody:
         description: Message to send.
@@ -169,14 +169,14 @@ paths:
       responses:
         "200":
           description: >-
-            The user exists and is available.
+            The client exists and is available.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Messages"
         "404":
           description: >-
-            The user does not exist.
+            The client does not exist.
           content:
             application/json:
               schema:
@@ -185,43 +185,43 @@ paths:
           $ref: "#/components/responses/UnauthorizedError"
 components:
   schemas:
-    User:
+    Client:
       type: object
       properties:
-        user_id:
+        client_id:
           type: string
           description: >-
-            Unique identifier for this user.
+            Unique identifier for this client.
         full_name:
           type: string
           description: >-
-            Public display name of this user.
+            Public display name of this client.
         public_key:
           type: string
           description: >-
-            Public key for this user.
-    NewUser:
+            Public key for this client.
+    NewClient:
       type: object
       properties:
         full_name:
           type: string
           description: >-
-            Public display name of this user.
+            Public display name of this client.
         public_key:
           type: string
           description: >-
-            Public key for this user.
+            Public key for this client.
         password_hash:
           type: string
           format: password
           description: >-
-            A SHA256 hash of the user's password. Do not send the plain-text
+            A SHA256 hash of the client's password. Do not send the plain-text
             password to the server.
         email:
           type: string
           format: email
           description: >-
-            Contact email address for this user.
+            Contact email address for this client.
         phone_number:
           type: object
           properties:
@@ -241,18 +241,22 @@ components:
     Message:
       type: object
       properties:
+        hash:
+          type: string
+          description: >-
+            Base64 encoded 16-byte Blake2b hash of this message's body. When sending messages, this field does not need to be specified (it will be overwritten by the server if specified).
         from:
           type: string
           description: >-
-            User ID of sender.
+            Client ID of sender.
         to:
           type: string
           description: >-
-            User ID of recipient.
+            Client ID of recipient.
         body:
           type: string
           description: >-
-            Text body of message, encrypted using a libsodium Box.
+            Text body of message, encrypted using a libsodium Box with base64 encoding.
       required:
         - from
         - to
@@ -267,18 +271,17 @@ components:
     LoginRequest:
       type: object
       properties:
-        user_id:
+        client_id:
           type: string
           description: >-
-            User ID for the login request.
+            Client ID for the login request.
         password_hash:
           type: string
           format: password
           description: >-
-            A SHA256 hash of the user's password. Do not send the plain-text
-            password to the server.
+            A base64 encoded 64-byte Blake2b hash of the client's password.
       required:
-        - user_id
+        - client_id
         - password_hash
   responses:
     UnauthorizedError:
