# src/models.rs
@@ -1,13 +1,13 @@
 #[derive(Debug, Deserialize)]
 pub struct AuthRequest {
-    pub user_id: String,
+    pub client_id: String,
     pub password_hash: String,
 }
 
 #[derive(Debug, Serialize)]
 #[serde(rename_all = "snake_case")]
 pub struct AuthResponse {
-    pub user_id: String,
+    pub client_id: String,
     pub token: String,
 }
 
@@ -18,7 +18,7 @@ pub struct PhoneNumber {
 }
 
 #[derive(Debug, Deserialize)]
-pub struct NewUserRequest {
+pub struct NewClientRequest {
     pub full_name: String,
     pub password_hash: String,
     pub email: String,
@@ -28,15 +28,15 @@ pub struct NewUserRequest {
 
 #[derive(Debug, Serialize)]
 #[serde(rename_all = "snake_case")]
-pub struct NewUserResponse {
-    pub user_id: String,
+pub struct NewClientResponse {
+    pub client_id: String,
     pub token: String,
 }
 
 #[derive(Debug, Serialize)]
 #[serde(rename_all = "snake_case")]
-pub struct GetUserResponse {
-    pub user_id: String,
+pub struct GetClientResponse {
+    pub client_id: String,
     pub full_name: String,
     pub public_key: String,
 }
